Use JDK's snippet markup parser