@@ -44,6 +44,10 @@
 						<arg>jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
 						<arg>--add-exports</arg>
 						<arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>jdk.javadoc/jdk.javadoc.internal.doclets.formats.html.taglets.snippet=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>jdk.javadoc/jdk.javadoc.internal.doclets.formats.html.taglets=ALL-UNNAMED</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
